# tea-factory-simulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  ci.yml
src/: Simulator.cpp  Simulator.h  TeaBatch.cpp  TeaBatch.h  main.cpp
src/cli/: Args.cpp  Args.h  main.cpp
src/domain/: Model.cpp  Model.h  ProcessState.h  TeaLeaf.h
src/io/: CsvWriter.cpp  CsvWriter.h
src/process/: DryingProcess.cpp  DryingProcess.h  IProcess.h  RollingProcess.cpp  RollingProcess.h  SteamingProcess.cpp  SteamingProcess.h
src/simulation/: Simulator.cpp  Simulator.h
tests/: CMakeLists.txt  test_args.cpp  test_csvwriter.cpp  test_csvwriter_io.cpp  test_dummy.cpp  test_model.cpp  test_process_state.cpp  test_processes.cpp  test_simulator.cpp  test_teabatch.cpp  test_tealeaf.cpp  test_utils.h
